--- a/normalize.css
+++ b/normalize.css
@@ -196,7 +196,7 @@
   [type="button"],
   [type="reset"],
   [type="submit"] {
-    -webkit-appearance: button;
+    appearance: button;
   }
   
   /**
@@ -288,7 +288,7 @@
    */
   
   [type="search"] {
-    -webkit-appearance: textfield; /* 1 */
+    appearance: textfield; /* 1 */
     outline-offset: -2px; /* 2 */
   }
   
@@ -297,7 +297,7 @@
    */
   
   [type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
+    appearance: none;
   }
   
   /**
@@ -306,7 +306,7 @@
    */
   
   ::-webkit-file-upload-button {
-    -webkit-appearance: button; /* 1 */
+    appearance: button; /* 1 */
     font: inherit; /* 2 */
   }
   
